--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ email:
 twitter_username: @randypettus
 
 # Set this to true to get LaTeX math equation support
-use_math: true
+use_math:
 
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: minima
