removed twitter at sign

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username: jrpettus
 
 # Email and twitter are optional:
 email: 
-twitter_username: @randypettus
+twitter_username: randypettus
 
 # Set this to true to get LaTeX math equation support
 use_math:
